<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
         <groupId>io.github.tanhuang2016</groupId>
        <artifactId>redis-fx</artifactId>
        <version>2.3.23</version>
    </parent>

    <name>rdm-redis-imp</name>
    <description>${description}</description>
    <artifactId>rdm-redis-imp</artifactId>
    <version>2.3.23</version>
    <properties>

        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
<!--        <jedis.version>4.3.0</jedis.version>-->
        <jedis.version>6.0.0</jedis.version>

    </properties>
    <developers>
        <developer>
            <name>${developer.name}</name>
            <email>${developer.email}</email>
            <url>${projectUrl}</url>
        </developer>
    </developers>
    <url>${projectUrl}</url>
    <licenses>
        <license>
            <name>${license.name}</name>
            <url>${license.url}</url>
            <distribution>${license.distribution}</distribution>
        </license>
    </licenses>
    <scm>
        <connection>${projectUrl}</connection>
        <developerConnection>${projectUrl}</developerConnection>
        <url>${projectUrl}</url>
    </scm>
    <dependencies>
        <!-- junit -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>redis.clients</groupId>
            <artifactId>jedis</artifactId>
            <version>${jedis.version}</version>
        </dependency>
        <dependency>
             <groupId>io.github.tanhuang2016</groupId>
            <artifactId>rdm-redis</artifactId>
            <version>${rdm.version}</version>
        </dependency>
        <dependency>
             <groupId>io.github.tanhuang2016</groupId>
            <artifactId>rdm-common</artifactId>
            <version>${rdm.version}</version>
        </dependency>
<!--        <dependency>-->
<!--            <groupId>org.bouncycastle</groupId>-->
<!--            <artifactId>bcpkix-jdk18on</artifactId>-->
<!--            <version>1.77</version>-->
<!--        </dependency>-->

        <dependency>
            <groupId>com.jcraft</groupId>
            <artifactId>jsch</artifactId>
            <version>0.1.55</version>
        </dependency>
    </dependencies>



    <profiles>
        <profile>
            <id>publish</id>
            <build>

                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <version>3.2.1</version>
                        <inherited>false</inherited>
                        <executions>
                            <execution>
                                <phase>package</phase>
                                <goals>
                                    <goal>jar-no-fork</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>3.3.0</version>
                        <inherited>false</inherited>
                        <configuration>
                            <nohelp>true</nohelp>
                            <charset>${encoding}</charset>
                            <encoding>${encoding}</encoding>
                            <docencoding>${encoding}</docencoding>
                            <failOnError>false</failOnError>
                        </configuration>
                        <executions>
                            <execution>
                                <phase>compile</phase>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>1.6</version>
                        <inherited>false</inherited>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                                <configuration>
                                    <gpgArguments>
                                        <arg>--pinentry-mode</arg>
                                        <arg>loopback</arg>
                                    </gpgArguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.sonatype.central</groupId>
                        <artifactId>central-publishing-maven-plugin</artifactId>
                        <version>0.9.0</version>
                        <extensions>true</extensions>
                        <configuration>
                            <publishingServerId>central</publishingServerId>
                            <autoPublish>true</autoPublish>
                        </configuration>
                    </plugin>

                </plugins>
            </build>
        </profile>
    </profiles>
</project>